--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -7,7 +7,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top:35%;
+  margin-top:15%;
 }
 
 .icons,
@@ -28,7 +28,7 @@ footer {
 
 .icon {
   font-size: 2rem;
-  color: #fff;
+  color: aliceblue;
   margin: 0 10px;
   display: inline-block;
   transition: 0.5s;
@@ -48,7 +48,7 @@ footer {
   font-weight: 300;
 }
 .menu__link:hover{
-	color: white;
+	color: aliceblue;
 }
 
 .menu__link:hover {
@@ -60,6 +60,7 @@ footer p {
   margin: 15px 0 10px 0;
   font-size: 1rem;
   font-weight: 300;
+  opacity: 0.6;
 }
 
 .wave {
@@ -115,5 +116,17 @@ footer p {
   }
   100% {
     background-positon-x: 0px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  footer {
+    margin-top: 45%;
+  }
+}
+
+@media screen and (max-width: 872px) {
+  footer {
+    margin-top: 30%;
   }
 }
