--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -61,20 +61,44 @@
     display: none;
 }
 .logo{
+    width: 35px;
+    animation: rotate 2s;
     display: block;
     color: #D9D2C3;
     position: absolute;
-    top: 25px;
+    top: 15px;
     left: 30px;
 }
+.logo:hover{
+    rotate: 30%;
+}
+
+@keyframes rotate {
+    0% {
+      transform: rotate(-90deg)
+    }
+    100% {
+      transform: rotate(0deg)
+    }
+  }
 
 @media(max-width: 640px){
+    .NavText::after {
+      top: 40px;
+      
+    }
     .NavbarItems{
         position: relative;
-        
-     
-        transition: 0.5s height ease-in-out;
+        animation: slide-up 0.2s, slide-down 0.2s;
     }
+    @keyframes slide-down {
+        from {
+          transform: translateX(0);
+        }
+        to {
+          transform: translateX(-100);
+        }
+      }
     .NavbarItems .NavLinks {
         display: none;
     }
@@ -119,7 +143,7 @@
   }
 .NavbarItems .logo {
     position: absolute;
-    top: 25px;
+    top: 15px;
     left: 30px;
 }
 }
